test/spec_vectors/i32/fail/module_73.wat
(module (func (result i32) (i32.popcnt (i64.const 0))))